# dynamic-semantic-channel-hashing

./: .gitignore  LICENSE  README.md
.devcontainer/: devcontainer.json
code/deep-semantic-hashing/: pyproject.toml
code/deep-semantic-hashing/src/dsh/config/: configuration.py  data.py  env.py  metric.py  model.py  run.py  train.py
code/deep-semantic-hashing/src/dsh/data/: common.py  dataloader.py  dataset.py  mirflickr25k.py  nuswide.py
code/deep-semantic-hashing/src/dsh/embedding/: clipembedder.py  embedder.py  w2vembedder.py
code/deep-semantic-hashing/src/dsh/metric/: hamming.py  metricbase.py
code/deep-semantic-hashing/src/dsh/model/: cliphash.py  common.py  modelbase.py  tdsrdh.py
code/deep-semantic-hashing/src/dsh/run/: cliphash.py  hashlearning.py  inferrer.py  metric.py  tdsrdh.py  trainer.py
code/deep-semantic-hashing/src/dsh/utils/: activation.py  adapter.py  augmentation.py  collections.py  criterioncollector.py  enumextensions.py  evaluation.py  eventsystem.py  functions.py  initialization.py  jobs.py  logger.py  loss.py  memory.py  metrics.py  notebook_setup.py  parsing.py  pipelining.py  progress.py  progress.pyi  random.py  selector.py  serialization.py  setup.py  singleton.py  stopwatch.py  tensorboard.py  trace.py  types.py  unparsing.py
code/run/: config.all.json5  main.py
env/: Dockerfile  docker-compose.yml  requirements.dev.txt  requirements.txt
